gapfill/sortable css ensure hardware acceleration

--- a/quiz/css/gapFill.css
+++ b/quiz/css/gapFill.css
@@ -1,4 +1,11 @@
-* {margin: 0; padding:0;}
+* {margin: 0; padding:0;
+ -webkit-transform: translate3d(0, 0, 0);
+   -moz-transform: translate3d(0, 0, 0);
+   -ms-transform: translate3d(0, 0, 0);
+   transform: translate3d(0, 0, 0); 
+
+
+}
 
 
 
@@ -178,7 +185,7 @@ color: rgba(68, 68, 68,1);;
 
 
 .frame { 
-position: absolute;  padding: 0; width: 1000px; height: 380px; 
+position: absolute;  padding: 0; width: 1000px; height: 400px; 
 margin-top: 82px;
 
 
